--- a/STYLE.html
+++ b/STYLE.html
@@ -4,7 +4,7 @@
 	<title>style test</title>
 </head>
 <body>
-     <h1 style="font-size: 30px; color: #5F4C0B;">heading 1-2</h1>
+     <h1 style="font-size: 30px; color: blue-dress;">heading 1-2</h1>
      <h1>heading 1-3</h1>
      <h1>heading 2-1</h1>
      <h1>heading 2-2</h1>
