--- a/STYLE.html
+++ b/STYLE.html
@@ -4,11 +4,11 @@
 	<title>style test</title>
 </head>
 <body>
-     <h1 style="font-size: 30px; color: blue-dress;">heading 1-2</h1>
-     <h1>heading 1-3</h1>
-     <h1>heading 2-1</h1>
-     <h1>heading 2-2</h1>
-     <h1>heading 2-3</h1>
+     <h1 style="font size: 30px; color #FF5733  ;">heading 1-2</h1>
+     <h1 style="font size: 15px; color #FF5733  ;">heading 1-3</h1>
+     <h1 style="font size: 25px; color #FF5733  ;">heading 2-1</h1>
+     <h1 style="font size: 15px; color #FF5733  ;">heading 2-2</h1>
+     <h1 style="font size: 15px; color #FF5733  ;">heading 2-3</h1>
      
 </body>
 </html>
