--- a/STYLE.html
+++ b/STYLE.html
@@ -2,13 +2,29 @@
 <html>
 <head>
 	<title>style test</title>
+	<style type="text/css">
+		h1{
+			font-size: 60px;
+			color: teal;
+		}
+		h2{
+			font-size: 40px;
+			color: red;
+		}
+		.spawn{
+			font-size: 190px;
+		}
+		body{
+			background-color: #E6C0E4  ;
+		}
+	</style>
 </head>
 <body>
-     <h1 style="font size: 30px; color #FF5733  ;">heading 1-2</h1>
-     <h1 style="font size: 15px; color #FF5733  ;">heading 1-3</h1>
-     <h1 style="font size: 25px; color #FF5733  ;">heading 2-1</h1>
-     <h1 style="font size: 15px; color #FF5733  ;">heading 2-2</h1>
-     <h1 style="font size: 15px; color #FF5733  ;">heading 2-3</h1>
+     <h1>heading 1-2</h1>
+     <h1 class="spawn">heading 1-3</h1>
+     <h2 >heading 2-1</h2>
+     <h2>heading 2-2</h2>
+     <h2>heading 2-3</h2>
      
 </body>
 </html>
